--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bs-tooltip",
   "version": "1.0.0",
   "description": "Component Description",
-  "main": "build/bs-component-name.js",
+  "main": "build/bs-tooltip.js",
   "scripts": {
     "test": "node node_modules/karma/bin/karma start",
     "build": "webpack --optimize-minimize"
@@ -30,11 +30,11 @@
     "ngmin": "^0.5.0",
     "ngmin-webpack-plugin": "^0.1.3",
     "style-loader": "^0.8.3",
-    "webpack": "^1.4.15"
+    "webpack": "^1.4.15",
+    "angular-mocks": "^1.3.15"
   },
   "dependencies": {
     "angular": "^1.3.15",
-    "angular-mocks": "^1.3.15",
     "bs-styleguide": "0.0.4",
     "jquery": "^2.1.3"
   }
