--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-tooltip",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Component Description",
   "main": "build/bs-tooltip.js",
   "scripts": {
@@ -34,7 +34,7 @@
     "angular-mocks": "^1.3.15"
   },
   "dependencies": {
-    "angular": "^1.3.15",
+    "angular": ">=1.3.0",
     "bs-styleguide": "0.0.4",
     "jquery": "^2.1.3"
   }
