--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "bs-tooltip",
+  "name": "cp-tooltip",
   "version": "1.2.0",
   "description": "Component Description",
-  "main": "build/bs-tooltip.js",
+  "main": "build/cp-tooltip.js",
   "scripts": {
     "test": "node node_modules/karma/bin/karma start",
     "build": "webpack --optimize-minimize"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Beanstalkhq/bs-tooltip.git"
+    "url": "https://github.com/canopytax/cp-tooltip.git"
   },
   "author": "Bret Little",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Beanstalkhq/bs-tooltip/issues"
+    "url": "https://github.com/canopytax/cp-tooltip/issues"
   },
-  "homepage": "https://github.com/Beanstalkhq/bs-tooltip",
+  "homepage": "https://github.com/canopytax/cp-tooltip",
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
     "babel-core": "^4.7.13",
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "angular": ">=1.3.0",
-    "bs-styleguide": "0.0.4",
-    "jquery": "^2.1.3"
-  }
+    "jquery": ">=2.0.0"
+  },
+	"optionalDependencies": {
+    "canopy-styleguide": "1.1.0"
+	}
 }
