--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "jquery": ">=2.0.0"
   },
 	"optionalDependencies": {
-    "canopy-styleguide": "1.1.0"
+    "canopy-styleguide": "latest"
 	}
 }
