--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cp-tooltip",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Component Description",
   "main": "build/cp-tooltip.js",
   "scripts": {
@@ -35,6 +35,7 @@
   },
   "dependencies": {
 	"angular": ">=1.3.0",
+	"angular-sanitize": "^1.5.3",
 	"jquery": ">=2.0.0"
   },
   "optionalDependencies": {
