--- a/package.json
+++ b/package.json
@@ -4,41 +4,41 @@
   "description": "Component Description",
   "main": "build/cp-tooltip.js",
   "scripts": {
-	"test": "node node_modules/karma/bin/karma start",
-	"build": "webpack --optimize-minimize"
+    "test": "node node_modules/karma/bin/karma start",
+    "build": "webpack --optimize-minimize"
   },
   "repository": {
-	"type": "git",
-	"url": "https://github.com/canopytax/cp-tooltip.git"
+    "type": "git",
+    "url": "https://github.com/canopytax/cp-tooltip.git"
   },
   "author": "Bret Little",
   "license": "MIT",
   "bugs": {
-	"url": "https://github.com/canopytax/cp-tooltip/issues"
+    "url": "https://github.com/canopytax/cp-tooltip/issues"
   },
   "homepage": "https://github.com/canopytax/cp-tooltip",
   "devDependencies": {
-	"autoprefixer-loader": "^1.2.0",
-	"babel-core": "^4.7.13",
-	"babel-loader": "^4.2.0",
-	"css-loader": "^0.21.0",
-	"jasmine-core": "^2.3.4",
-	"karma": "^0.13.14",
-	"karma-chrome-launcher": "^0.1.7",
-	"karma-jasmine": "^0.3.4",
-	"karma-phantomjs-launcher": "^0.1.4",
-	"ngmin": "^0.5.0",
-	"ngmin-webpack-plugin": "^0.1.3",
-	"style-loader": "^0.13.0",
-	"webpack": "^1.4.15",
-	"angular-mocks": "^1.3.15"
+    "angular-mocks": "1.5.5",
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^4.7.13",
+    "babel-loader": "^4.2.0",
+    "css-loader": "^0.23.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "ngmin": "^0.5.0",
+    "ngmin-webpack-plugin": "^0.1.3",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0"
   },
   "dependencies": {
-	"angular": ">=1.3.0",
-	"angular-sanitize": "^1.5.3",
-	"jquery": ">=2.0.0"
+    "angular": ">=1.3.0",
+    "angular-sanitize": "^1.5.5",
+    "jquery": ">=2.0.0"
   },
   "optionalDependencies": {
-	"canopy-styleguide": "latest"
+    "canopy-styleguide": "latest"
   }
 }
